# seeed_mgc3030_driver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  tags
launch/: mgc3030.launch  mgc3030_cmd_vel.launch  mgc3030_cmd_vel_turtle.launch
nodes/: README.md  tracker_controller.py  tracker_controller_basic.py  tracker_controller_gesture_turtle.py  tracker_controller_gesture_vel.py  tracker_controller_point_vel.py  tracker_controller_turtle.py  tracker_controller_vel.py
src/: mgc3030_node.cpp
tools/: boot.bash  init.sh
