<?xml version="1.0"?>
<package format="2">
  <name>seeed_mgc3030_driver</name>
  <version>0.0.0</version>
  <description>3D hand tracking for the mgc3030 by Seeed</description>
  <maintainer email="cnboonhan94@gmail.com">Charayaphan Nakorn Boon Han</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
